--- a/week1_basics/docker/docker-compose.yml
+++ b/week1_basics/docker/docker-compose.yml
@@ -19,3 +19,14 @@ volumes:
   postgres-volume:
   # external: true
 
+
+  pgadmin:
+    image: dpage/pgadmin4
+    environment:
+      - PGADMIN_DEFAULT_EMAIL=admin@admin.com
+      - PGADMIN_DEFAULT_PASSWORD=root
+    ports:
+      - "8080:80"
+
+
+
