docker file image built for ingesting data and docker compose built for running postgres and pgadmin at once

--- a/week1_basics/docker/docker-compose.yml
+++ b/week1_basics/docker/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     - POSTGRES_PASSWORD=root
     - POSTGRES_DB=ny_taxi
     volumes:
-      -  postgres-volume:/var/lib/postgresql/data:rw
+      -  "/C/Users/hp/data_engineering_bootcamp/week1_basics/docker/ny_taxi_postgres_data:/var/lib/postgresql/data:rw"
     ports:
       - "5432:5432"
     healthcheck:
@@ -15,16 +15,15 @@ services:
       retries: 5
     restart: always
 
-volumes:
-  postgres-volume:
-  # external: true
-
+  # no need to define --network tag in docker compose..it will auto create a network for both image since they are under the same service 
 
   pgadmin:
     image: dpage/pgadmin4
     environment:
       - PGADMIN_DEFAULT_EMAIL=admin@admin.com
       - PGADMIN_DEFAULT_PASSWORD=root
+    volumes:
+      - "/C/Users/hp/data_engineering_bootcamp/week1_basics/docker/pgadmin_data:/var/lib/pgadmin"
     ports:
       - "8080:80"
 
