--- a/week1_basics/docker/DockerFile
+++ b/week1_basics/docker/DockerFile
@@ -1,9 +1,11 @@
 FROM python:3.9
 
-RUN pip install pandas
+RUN apt-get install wget
+
+RUN pip install pandas sqlalchemy psycopg2
 
 WORKDIR /app
 
-COPY pipeline.py pipeline.py
+COPY ingest_practise.py ingest_practise.py
 
-ENTRYPOINT [ "bash" ]
+ENTRYPOINT [ "python", "ingest_practise.py" ]
