--- a/week4_dbt/dbt_datacamp/dbt_project.yml
+++ b/week4_dbt/dbt_datacamp/dbt_project.yml
@@ -7,7 +7,7 @@ version: '1.0.0'
 config-version: 2
 
 # This setting configures which "profile" dbt uses for this project.
-profile: 'pg_dbt_datacamp'
+profile: 'dbt_datacamp'
 
 # These configurations specify where dbt should look for different types of files.
 # The `model-paths` config, for example, states that models in this project can be
@@ -37,3 +37,12 @@ models:
     # Config indicated by + and applies to all files under models/example/
     example:
       +materialized: view
+
+vars:
+  payment_type_values: [1,2,3,4,5,6]
+
+seeds:
+  ny-rides-horlad:
+    taxi_zone_lookup:
+      +column_types:
+        locationid: numeric
